<resources>
    <string name="app_name">My application</string>
    <string name="button_text_click">Click!!!!</string>
    <string name="HOME1">HOME 1</string>
    <string name="HOME2">HOME 2</string>
    <string name="HOME3">HOME 3</string>
    <string name="HOME4">HOME 4</string>
    <string name="HOME5">HOME 5</string>
    <string name="HOME6">HOME 6</string>
    <string name="HOME7">HOME 7</string>
    <string name="HOME8">HOME 8</string>
    <string name="HOME9">HOME 9</string>
    <string name="HOME11">HOME 11</string>
    <string name="hw1_load_image">Load Image</string>
    <string name="open_shared_canvas">open shared canvas</string>
    <string name="hw1_set_pixel">SET PIXEL</string>
    <string name="hw1_send_command">SEND GET COMMAND</string>
    <string name="hw1_crr_0_0_crr_1_0_color_rgb_0_0_0" translatable="false">crr[0]=0&amp;crr[1]=0&amp;color=rgb(0,0,0)</string>
    <string name="hw2_open_flags">open flags</string>
    <string name="hw2_open_animation">open animation</string>
    <string name="Link_flag_armenia">https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Flag_of_Armenia.svg/1920px-Flag_of_Armenia.svg.png</string>
    <string name="Link_flag_austria">https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Flag_of_Austria.svg/1280px-Flag_of_Austria.svg.png</string>
    <string name="Link_flag_belgium">https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/1280px-Flag_of_Belgium_%28civil%29.svg.png</string>
    <string name="Link_flag_latvia">https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Flag_of_Latvia.svg/1920px-Flag_of_Latvia.svg.png</string>
    <string name="Link_flag_denmark">https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Flag_of_Denmark.svg/1280px-Flag_of_Denmark.svg.png</string>
    <string name="Link_flag_spain">https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Spain.svg/1280px-Flag_of_Spain.svg.png</string>
    <string name="hw2_name_armenia">Armenia</string>
    <string name="hw2_name_austria">Austria</string>
    <string name="hw2_name_belgium">Belgium</string>
    <string name="hw2_name_latvia">Latvia</string>
    <string name="hw2_name_denmark">Denmark</string>
    <string name="hw2_name_spain">Spain</string>
    <string name="hw2_open_flags_v2">open flags v2</string>
    <string name="hw3_region_Minsk">Минская область</string>
    <string name="hw3_region_Viciebsk">Витебская область</string>
    <string name="hw3_region_Hrodna">Гродненская область</string>
    <string name="hw3_region_Brest">Брестская область</string>
    <string name="hw3_region_Homiel">Гомельская область</string>
    <string name="hw3_region_Mahilo">Могилевская область</string>
    <string name="hw3_crop_cereal">Зерновые</string>
    <string name="hw3_crop_potatoes">Картофель</string>
    <string name="hw3_crop_cabbage">Капуста</string>
    <string name="hw3_crop_beet">Свекла</string>
    <string name="hw3_start_progress">0/1000</string>
    <string name="Link_crest_Minsk">https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Coat_of_arms_of_Minsk.svg/800px-Coat_of_arms_of_Minsk.svg.png</string>
    <string name="Link_crest_Viciebsk">https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Coat_of_Arms_of_Viciebsk%2C_Belarus.svg/1024px-Coat_of_Arms_of_Viciebsk%2C_Belarus.svg.png</string>
    <string name="Link_crest_Hrodna">https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Coat_of_arms_of_Hrodna.svg/800px-Coat_of_arms_of_Hrodna.svg.png</string>
    <string name="Link_crest_Brest">https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Coat_of_Arms_of_Brest%2C_Belarus.svg/800px-Coat_of_Arms_of_Brest%2C_Belarus.svg.png</string>
    <string name="Link_crest_Homiel">https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Coat_of_Arms_of_Homiel%2C_Belarus.svg/800px-Coat_of_Arms_of_Homiel%2C_Belarus.svg.png</string>
    <string name="Link_crest_Mahilo">https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Coat_of_Arms_of_Mahilo%C5%AD.svg/800px-Coat_of_Arms_of_Mahilo%C5%AD.svg.png</string>
    <string name="hw4_add_snowdrop">add snowdrop</string>
    <string name="hw4_watch_collection">watch collection</string>
    <string name="kind">Kind</string>
    <string name="url">Url</string>
    <string name="description">Description</string>
    <string name="hw4_back">back</string>
    <string name="error_empty">Can\'t be empty</string>
    <string name="empty_text">...</string>
    <string name="сommon_snowdrop">Подснежник обыкновенный</string>
    <string name="link_common_snowdrop">https://rozisad.ru/wp-content/uploads/2019/02/galanthus-nivalis.jpg</string>
    <string name="info_common_snowdrop">произрастает комфортно в зонах с 3 по 7. Высота растения – 15 — 30 см. Зацветает он в феврале. Цветок белый с зеленой V-образной каймой на внутренних лепестках. Предпочитает солнце или легкую полутень. Обладает ароматом с нотками меда..</string>
    <string name="giant_snowdrop">Гигантский подснежник</string>
    <string name="link_giant_snowdrop">https://rozisad.ru/wp-content/uploads/2019/02/galanthus-elwesii-giant.jpg</string>
    <string name="info_giant_snowdrop">растет в зонах с 4 по 7. Высота – 15 — 30 см. Цветет с февраля по март. Окраска – белая, внутренние лепестки имеют v-образную зеленую кайму. Участок для посадки – солнечный или с легкой полутенью.</string>
    <string name="galanthus_plicatus">Подснежник крымский</string>
    <string name="link_galanthus_plicatus">https://rozisad.ru/wp-content/uploads/2019/02/galanthus-plicatus-crimean.jpg</string>
    <string name="info_galanthus_plicatus">растет в зонах с 3 по 8. Высота – от 17 см до 30 см. Время цветения – с февраля по март. Верхние лепестки – белые, внутренние имеют зеленую кайму в виде сердца. Солнце или небольшая полутень – оптимальное место для посадки.</string>
    <string name="hw5_login">Login</string>
    <string name="check_in">CHECK IN</string>
    <string name="registration">registration</string>
    <string name="password">Password</string>
    <string name="hw_enter_login">Enter login</string>
    <string name="hw5_enter_password">Enter password</string>
    <string name="error_login_empty">Error. Login is empty</string>
    <string name="error_password_empty">Error. Password is empty</string>
    <string name="error_password_short">Error. Password too short</string>
    <string name="error_check_login">Error. Check your login</string>
    <string name="error_check_password">Error. Check your password</string>
    <string name="apply">apply</string>
    <string name="registration_successful">Registration successful</string>
    <string name="ok">ok</string>
    <string name="log_in">log in</string>
    <string name="welcome">Welcome</string>


    <string name="link_nine_may">https://a.d-cd.net/7UAAAgEvw-A-960.jpg</string>
    <string name="link_victory_day">https://www.zastavki.com/pictures/600x1024/2014/Holidays___May_9_Wallpaper_in_the_May_9_Victory_Day_078761_28.jpg</string>
    <string name="text_victory">
        <p>Пусть небо ваше чистым будет,\n</p>
        <p>Не гаснет радости звезда,\n</p>
        <p>И грохот танков и орудий\n</p>
        <p>Уйдет из жизни навсегда.\n</p>
        <p>Теченью лет не прекословя,\n</p>
        <p>Мы вам желаем всей душой\n</p>
        <p>Здоровья и опять здоровья\n</p>
        <p>И жизни, доброй и большой!\n</p>
    </string>
    <string name="hw7_create_item">create item</string>
    <string name="participant">Participant</string>
    <string name="start_pay">Start pay</string>
    <string name="error_not_number">Error. It is not number</string>
    <string name="name_item">Name Item</string>
    <string name="my_name">My name</string>
    <string name="ost">Сost</string>
    <string name="bet">bet</string>
    <string name="error_should_be_more_than">Error. Should be more than</string>
    <string name="current_coast">Current Coast</string>
    <string name="leader">Leader</string>
    <string name="date">Date</string>
    <string name="link_get_logo_crypto">https://s2.coinmarketcap.com/static/img/coins/64x64/</string>
    <string name="png_format">.png</string>
    <string name="link_crypto_trend">https://s3.coinmarketcap.com/generated/sparklines/web/7d/usd/</string>
    <string name="start">start</string>
</resources>