<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/kind"
        android:textSize="@dimen/hw2_text_size"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hw4_kind_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:gravity="end"
        android:text="@string/empty_text"
        android:textSize="@dimen/hw2_text_size"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hw4_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintBottom_toTopOf="@id/scroll"
        app:layout_constraintTop_toBottomOf="@id/hw4_kind_info" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintBottom_toTopOf="@id/hw4_back_btn">

        <TextView
            android:id="@+id/hw4_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </ScrollView>


    <Button
        android:id="@+id/hw4_back_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/hw4_back"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>